# discord-tft

./: README.md  pyproject.toml
app/: main.py  startup.py
app/routes/: general.py  league.py  startup.py  status.py  tft.py
app/utils/: args.py  fetch_secrets.py
